fix: gh-pages path issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffee app",
+  "name": "coffee-app",
   "homepage": "https://aymaq-code.github.io/coffee-app/",
   "private": true,
   "version": "0.0.0",
