--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coffee-app",
-  "homepage": "https://aymaq-code.github.io/coffee-app/",
+  "homepage": "https://aymaq-code.github.io/Coffee-App",
   "private": true,
   "version": "0.0.0",
   "type": "module",
